...
import com.android.sample.model.skill.MainSubject
import com.android.sample.ui.components.AppButton
import com.android.sample.ui.components.LocationInputField
import com.android.sample.ui.navigation.NavRoutes

object NewListingScreenTestTag {
  const val BUTTON_SAVE_LISTING = "buttonSaveListing"
  const val CREATE_LESSONS_TITLE = "createLessonsTitle"
  const val INPUT_COURSE_TITLE = "inputCourseTitle"
  const val INVALID_TITLE_MSG = "invalidTitleMsg"
  const val INPUT_DESCRIPTION = "inputDescription"
  const val INVALID_DESC_MSG = "invalidDescMsg"
  const val INPUT_PRICE = "inputPrice"
  const val INVALID_PRICE_MSG = "invalidPriceMsg"
  const val SUBJECT_FIELD = "subjectField"
  const val SUBJECT_DROPDOWN = "subjectDropdown"
  const val SUBJECT_DROPDOWN_ITEM_PREFIX = "subjectItem"
  const val INVALID_SUBJECT_MSG = "invalidSubjectMsg"
  const val SUB_SKILL_FIELD = "subSkillField"
  const val SUB_SKILL_DROPDOWN = "subSkillDropdown"
  const val SUB_SKILL_DROPDOWN_ITEM_PREFIX = "subSkillItem"
  const val INVALID_SUB_SKILL_MSG = "invalidSubSkillMsg"
  const val LISTING_TYPE_FIELD = "listingTypeField"
  const val LISTING_TYPE_DROPDOWN = "listingTypeDropdown"
  const val LISTING_TYPE_DROPDOWN_ITEM_PREFIX = "listingTypeItem"
  const val INVALID_LISTING_TYPE_MSG = "invalidListingTypeMsg"
  const val BUTTON_USE_MY_LOCATION = "buttonUseMyLocation"

  const val INPUT_LOCATION_FIELD = "inputLocationField"

  const val SCROLLABLE_SCREEN = "scrollNewListing"
}

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun NewListingScreen(
    skillViewModel: NewListingViewModel = viewModel(),
...
  val buttonText =
      if (isEditMode) "Save Changes"
      else
          when (listingUIState.listingType) {
            ListingType.PROPOSAL -> "Create Proposal"
            ListingType.REQUEST -> "Create Request"
            null -> "Create Listing"
          }

  val titleText = if (isEditMode) "Edit Listing" else "Create Your Listing"

  Scaffold(
      floatingActionButton = {
...
    onTitleChange: (String) -> Unit,
) {
  OutlinedTextField(
      value = title,
      onValueChange = onTitleChange,
      label = { Text("Course Title") },
      placeholder = { Text("Title") },
      isError = invalidTitleMsg != null,
      supportingText = {
        invalidTitleMsg?.let {
          Text(text = it, modifier = Modifier.testTag(NewListingScreenTestTag.INVALID_TITLE_MSG))
        }
      },
...
    invalidDescMsg: String?,
    onDescriptionChange: (String) -> Unit,
) {
  OutlinedTextField(
      value = description,
      onValueChange = onDescriptionChange,
      label = { Text("Description") },
      placeholder = { Text("Description of the skill") },
      isError = invalidDescMsg != null,
      supportingText = {
        invalidDescMsg?.let {
          Text(text = it, modifier = Modifier.testTag(NewListingScreenTestTag.INVALID_DESC_MSG))
        }
...
    invalidPriceMsg: String?,
    onPriceChange: (String) -> Unit,
) {
  OutlinedTextField(
      value = price,
      onValueChange = onPriceChange,
      label = { Text("Hourly Rate") },
      placeholder = { Text("Price per Hour") },
      isError = invalidPriceMsg != null,
      supportingText = {
        invalidPriceMsg?.let {
          Text(text = it, modifier = Modifier.testTag(NewListingScreenTestTag.INVALID_PRICE_MSG))
        }
...
      onExpandedChange = { expanded = it },
      modifier = Modifier.fillMaxWidth()) {
        OutlinedTextField(
            value = selectedSubject?.name ?: "",
            onValueChange = {},
            readOnly = true,
            label = { Text("Subject") },
            trailingIcon = { ExposedDropdownMenuDefaults.TrailingIcon(expanded) },
            isError = errorMsg != null,
            supportingText = {
              errorMsg?.let {
                Text(
                    text = it,
...
      onExpandedChange = { expanded = it },
      modifier = Modifier.fillMaxWidth()) {
        OutlinedTextField(
            value = selectedListingType?.name ?: "",
            onValueChange = {},
            readOnly = true,
            label = { Text("Listing Type") },
            trailingIcon = { ExposedDropdownMenuDefaults.TrailingIcon(expanded) },
            isError = errorMsg != null,
            supportingText = {
              errorMsg?.let {
                Text(
                    text = it,
...
      onExpandedChange = { expanded = it },
      modifier = Modifier.fillMaxWidth()) {
        OutlinedTextField(
            value = selectedSubSkill ?: "",
            onValueChange = {},
            readOnly = true,
            label = { Text("Sub-Subject") },
            trailingIcon = { ExposedDropdownMenuDefaults.TrailingIcon(expanded) },
            isError = errorMsg != null,
            supportingText = {
              errorMsg?.let {
                Text(
                    text = it,
...
