...
        bottomBar = {  },
        floatingActionButton = {
            FloatingActionButton(
                onClick = { /* TODO add new tutor */ },
                containerColor = Color(0xFF00ACC1)
            ) {
                Icon(Icons.Default.Add, contentDescription = "Add")
            }
        }
    ) { paddingValues ->
        Column(
            modifier = Modifier
                .padding(paddingValues)
...
    Column(modifier = Modifier.padding(horizontal = 10.dp)) {
        Text("Explore skills", fontWeight = FontWeight.Bold, fontSize = 16.sp)

        Spacer(modifier = Modifier.height(12.dp))

        Row(horizontalArrangement = Arrangement.spacedBy(10.dp)) {
            SkillCard("Academics", Color(0xFF4FC3F7))
            SkillCard("Music", Color(0xFFBA68C8))
            SkillCard("Sports", Color(0xFF81C784))
        }
    }
}

...
